--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "material-ui": "^0.17.4",
     "moment": "^2.18.1",
     "react": "^15.3.0",
+    "react-avatar": "^2.3.0",
     "react-dom": "^15.3.0",
+    "react-helmet": "^5.0.3",
     "react-komposer": "^1.3.0",
     "react-mounter": "^1.0.0",
     "react-router": "^2.8.1",
